--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
     "next": "15.5.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
     "zod": "^4.1.12"
   },
